Fixed mobile overflow on homepage

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: #333;
     line-height: 1.6;
+    overflow-x: hidden;
 }
 
 ul{
